<resources>
    <string name="app_name">LinkUs</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Tempatnya anak muda bikin story</string>
    <string name="title_welcome_page">Selamat datang di LinkUs!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Yuk masuk dulu!!!</string>
    <string name="title_login_page">Sudah siap untuk pamer story?</string>
    <string name="name">Nama</string>
    <string name="txt_error_empty_field">tidak boleh kosong</string>
    <string name="txt_error_short_password">password terlalu pendek</string>
    <string name="txt_error_map">Map error</string>
    <string name="txt_success">Berhasil</string>
    <string name="txt_failed">Gagal</string>
    <string name="txt_try_again">Coba lagi</string>
    <string name="txt_continue">Lanjutkan</string>
    <string name="btnLogout">Logout</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_logout_msg">Apakah anda yakin ingin logout?</string>
    <string name="txt_yes">Yakin</string>
    <string name="txt_logout_success">Berhasil logout</string>
    <string name="txt_no">Tidak</string>
    <string name="txt_no_item">Tidak ada item</string>
    <string name="txt_history_now">Baru saja</string>
    <string name="txt_history_minutes">%d menit lalu</string>
    <string name="txt_history_hours">%d jam lalu</string>
    <string name="txt_date_invalid">Tanggal Invalid</string>
    <string name="galeri">Galeri</string>
    <string name="txt_deskripsi">Masukkan Deskripsi</string>
    <string name="kamera">Kamera</string>
    <string name="tambah">Tambah</string>
    <string name="txt_add_story">Tambah story</string>
    <string name="txt_desc_warning">Deskripsi tidak boleh kosong</string>
    <string name="txt_close">Close</string>
    <string name="txt_image_warning">Image belum dipilih</string>
    <string name="iv_foto">foto story</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="btnMap">button peta</string>
</resources>